--- a/FileExplorer/css/common.css
+++ b/FileExplorer/css/common.css
@@ -1,33 +1,67 @@
+/* 초기화 */
+* {
+    margin: 0; padding: 0;
+    font-family: 'Nanum Gothic', sans-serif;
+}
+a { text-decoration: none; }
+li { list-style: none; }
+
+/* 기본 클래스 */
+/* .pull-left {float: left}
+.pull-right {float: right} */
+
+/* 페이지 구성 */
+body {
+    width: 960px; margin: 0 auto;
+    background: #E6E6E6
+}
+
+#page-wrapper {
+    background: white;
+    margin: 40px 0; padding: 10px 20px;
+    border-radius: 5px;
+    box-shadow: 0 2px 6px rgba(100, 100, 100, 0.3);
+}
+
+/* 헤더 구성 */
+#main-header {
+	padding: 40px 50px;
+	display: inline-block;
+}
+
+#main-header .master-img {
+	float: left;
+	/* display: inline-block; */
+	width : 30px;
+	height: 30px;
+}
+#main-header .master-title {
+	position: relative;
+	/* display: inline-block; */
+}
+
+#main-header .master-user {
+	float: right;
+	/* display: inline-block; */
+	width : 30px;
+	height: 30px;
+}
+
 .main-center {
 	border: 1px solid C8C8C8;
 	text-align: center;
 	border-collapse: collapse;
 }
+/* center-top */
 
-/* main-aside */
-
-.main-aside {
+.center-top {
 	width: 100%;
 }
 
-.main-aside .aside-body {
+.center-top .top-body {
 	padding: 8px 5px;
 	border-bottom: 1px solid #C8C8C8;
 	background: #DCDCDC;
-}
-
-.main-aside .aside-body .links {
-	font-size: 14px;
-	font-weight: normal;
-	text-align: right;
-}
-
-.main-aside .aside-body .links a {
-	display: inline-block;
-	background: #FFFFFF;
-	color: #DCDCDC;
-	padding: 2px 8px;
-	border-radius: 5px;
 }
 
 /* main-table */
