--- a/TestWebpack/Test2/src/scss/common.scss
+++ b/TestWebpack/Test2/src/scss/common.scss
@@ -1,6 +1,7 @@
 @import 'text.scss';
 
-$bg-color: #333333;
+// $bg-color: url('../asset/webpack.svg');
+$bg-color: red;
 
 body {
   background-color: $bg-color;
