--- a/TestWebpack/Test2/src/scss/common.scss
+++ b/TestWebpack/Test2/src/scss/common.scss
@@ -1,7 +1,7 @@
 @import 'text.scss';
 
 // $bg-color: url('../asset/webpack.svg');
-$bg-color: red;
+$bg-color: black;
 
 body {
   background-color: $bg-color;
