--- a/BEM/css/bundle.css
+++ b/BEM/css/bundle.css
@@ -11,11 +11,12 @@
   border: 1px solid #3f3f3f;
   border-radius: 2px; }
   .page-control__block {
-    width: 40px;
-    height: 40px;
+    width: 38px;
+    height: 38px;
     margin-top: 2px;
     float: left;
-    opacity: 0.9; }
+    opacity: 0.9;
+    border: 1px solid transparent; }
     .page-control__block--able:hover {
       opacity: 0.9;
       width: 38px;
@@ -30,9 +31,9 @@
     .page-control__block--seperator {
       margin-right: 2px; }
   .page-control__img {
-    width: 40%;
+    display: block;
     height: 40%;
-    margin: 30%; }
+    margin: 30% auto; }
   .page-control__seperator {
     width: 3px;
     height: 44px;
