--- a/BEM/src/scss/module/_page-control.scss
+++ b/BEM/src/scss/module/_page-control.scss
@@ -15,11 +15,12 @@
     border-radius: 2px;
 
     &__block {
-        width: 40px;
-        height: 40px;
+        width: 38px;
+        height: 38px;
         margin-top: 2px;
         float: left;
         opacity: 0.9;
+        border: 1px solid transparent;
 
         &--able:hover {
             opacity: 0.9;
@@ -42,9 +43,9 @@
     }
 
     &__img {
-        width: 40%;
+        display: block;
         height: 40%;
-        margin: 30%;
+        margin: 30% auto;
     }
 
     &__seperator {
