--- a/BEM/css/bundle.css
+++ b/BEM/css/bundle.css
@@ -1,40 +1,49 @@
-.wrap__page-control {
+.wrap__controlbar {
   position: absolute;
-  bottom: 0px;
-  left: 100px; }
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  text-align: center; }
 
-.page-control {
+.blank {
+  display: inline-block;
+  width: 0;
+  height: 100%;
+  vertical-align: middle; }
+
+.controlbar {
   display: inline-block;
   position: relative;
   padding: 0 8px;
   background-color: rgba(32, 32, 32, 0.9);
   border: 1px solid #3f3f3f;
-  border-radius: 2px; }
-  .page-control__block {
+  border-radius: 2px;
+  vertical-align: bottom;
+  bottom: 60px; }
+  .controlbar__block {
     width: 38px;
     height: 38px;
     margin-top: 2px;
     float: left;
     opacity: 0.9;
     border: 1px solid transparent; }
-    .page-control__block--able:hover {
+    .controlbar__block--able:hover {
       opacity: 0.9;
-      width: 38px;
-      height: 38px;
       background-color: rgba(255, 255, 255, 0.2);
       border: 1px solid #121212;
       border-radius: 2px;
       cursor: pointer; }
-    .page-control__block--disable {
+    .controlbar__block--disable {
       opacity: 0.2;
-      cursor: none; }
-    .page-control__block--seperator {
+      cursor: default; }
+    .controlbar__block--seperator {
       margin-right: 2px; }
-  .page-control__img {
+  .controlbar__img {
     display: block;
     height: 40%;
     margin: 30% auto; }
-  .page-control__seperator {
+  .controlbar__seperator {
     width: 3px;
     height: 44px;
     float: left;
