--- a/BEM/src/scss/module/_controlbar.scss
+++ b/BEM/src/scss/module/_controlbar.scss
@@ -1,19 +1,28 @@
-
-
-.wrap__page-control {
+.wrap__controlbar {
     position: absolute;
-    bottom: 0px;
-    left: 100px;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
 
-.page-control {
+.blank {
+    display: inline-block;
+    width: 0;
+    height: 100%;
+    vertical-align: middle;
+}
+
+.controlbar {
     display: inline-block;
     position: relative;
     padding: 0 8px;
     background-color: rgba(32, 32, 32, 0.9);
     border: 1px solid #3f3f3f;
     border-radius: 2px;
-
+    vertical-align: bottom;
+    bottom: 60px;
     &__block {
         width: 38px;
         height: 38px;
@@ -24,30 +33,24 @@
 
         &--able:hover {
             opacity: 0.9;
-            width: 38px;
-            height: 38px;
             background-color: rgba(255, 255, 255, 0.2);
             border: 1px solid #121212;
             border-radius: 2px;
             cursor: pointer;
         }
-
         &--disable {
             opacity: 0.2;
-            cursor: none;
+            cursor: default;
         }
-
         &--seperator {
             margin-right: 2px;
         }
     }
-
     &__img {
         display: block;
         height: 40%;
         margin: 30% auto;
     }
-
     &__seperator {
         width: 3px;
         height: 44px;
